--- a/share Money/server/package.json
+++ b/share Money/server/package.json
@@ -7,9 +7,12 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "path": "^0.12.7"
