--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
     "files.associations": {
         "*.ejs": "html",
         "*.txt": "bg3txt"
-    }
+    },
+    "pieces.cloudCapabilities": "Local"
 }
